--- a/PysikalischesSpiel/PysikalischesSpiel.html
+++ b/PysikalischesSpiel/PysikalischesSpiel.html
@@ -27,7 +27,7 @@
 
         const mapWidth = 100;
         const mapHeight = canvas.height;
-        const mapScale = 100;
+        const mapScale = 1;
 
         let mapOffset = 0;
         const speed = 100;
@@ -60,7 +60,7 @@
             ctx.beginPath();
             ctx.moveTo(0 - mapOffset, canvas.height);
             for (let x = 0; x < mapWidth; x++) {
-                ctx.lineTo(x*mapScale - mapOffset, terrain[x]);
+                ctx.lineTo((x- mapOffset)*mapScale , terrain[x]);
             }
             ctx.lineTo(mapWidth - mapOffset, canvas.height);
             ctx.closePath();
